--- a/Account.css
+++ b/Account.css
@@ -153,8 +153,9 @@ ul li.tab {
 	margin-top: 3px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	margin-right: 5px;
+	margin-right: 10px;
 	border-radius: 20px;
+	box-shadow: 0 0 0 3px rgba(0,0,0,0), 0 0 0 4px rgba(0,0,0,0);
 }
 ul li.tab:hover {
 	background-color: #3D619C;
@@ -190,6 +191,7 @@ ul.dropdown {
 }
 
 #home{
+	z-index: -1;
 	width: 75px;
 }
 #about {  
